Fix nav link color on mobile

--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -23,6 +23,12 @@ body {
       background: none;
     }
   }
+
+  @media (max-width: 800px) {
+    .page-navbar-nav--link {
+      color: #fff;
+    }
+  }
 }
 
 .lead-block {
